<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">School Diary</string>
    <string name="diary_text" tools:ignore="MissingTranslation">DIARY</string>
    <string name="fill_timetable" tools:ignore="MissingTranslation">FILL TIMETABLE FOR A WEEK</string>
    <string name="notes_text" tools:ignore="MissingTranslation">NOTES</string>
    <string name="create_note" tools:ignore="MissingTranslation">CREATE IMPORTANT NOTES</string>
    <string name="timetable_descr_text" tools:ignore="MissingTranslation">Until you do this for end, in this window nothing will change</string>
    <string name="lessons_name_text" tools:ignore="MissingTranslation">Lesson\'s name</string>
    <string name="choose_date_text" tools:ignore="MissingTranslation">Choose lesson\'s date</string>
    <string name="choose_time_text" tools:ignore="MissingTranslation">Choose lesson\'s time</string>
    <string name="insert_teachers_name_text" tools:ignore="MissingTranslation">Insert teacher\'s name</string>
    <string name="attachments_text" tools:ignore="MissingTranslation">Attachments:</string>
    <string name="rating_text" tools:ignore="MissingTranslation">Ratings:</string>
    <string name="homework_text" tools:ignore="MissingTranslation">Input your homework here</string>
    <string name="create_lesson_text" tools:ignore="MissingTranslation">Create lesson</string>
    <string name="add_lesson_text" tools:ignore="MissingTranslation">Add lesson</string>
    <string name="number_lesson_text" tools:ignore="MissingTranslation">Number in day</string>
    <string name="max_ratings_error" tools:ignore="MissingTranslation">You can not put more than two ratings</string>
    <string name="time_text" tools:ignore="MissingTranslation">Lesson\'s start time:</string>
    <string name="date_text" tools:ignore="MissingTranslation">Lesson\'s date:</string>
    <string name="lesson_add_text" tools:ignore="MissingTranslation">Lesson has been added!</string>
    <string name="your_timetable" tools:ignore="MissingTranslation">Your timetable at this moment:</string>
    <string name="minutes_text" tools:ignore="MissingTranslation">minute</string>
    <string name="teacher_text" tools:ignore="MissingTranslation">Teacher</string>
    <string name="ratings_at_lesson" tools:ignore="MissingTranslation">Lesson grade</string>
    <string name="your_homework_text" tools:ignore="MissingTranslation">H/w:</string>
    <string name="no_lessons_text" tools:ignore="MissingTranslation">No lessons for today!</string>
    <string name="update_lesson_text" tools:ignore="MissingTranslation">Update lesson</string>
    <string name="will_be_added_soon" tools:ignore="MissingTranslation">Will be added soon…</string>
    <string name="create_note_text" translatable="false">Create note</string>
    <string name="create_first_note_text" tools:ignore="MissingTranslation">Create your first note</string>
    <string name="notes_heading_text" tools:ignore="MissingTranslation">Note\'s heading</string>
    <string name="notes_maintext_text" tools:ignore="MissingTranslation">Note\'s text</string>
    <string name="send_note_text" tools:ignore="MissingTranslation">Share note via…</string>
    <string name="attention_text" tools:ignore="MissingTranslation">Attention!</string>
    <string name="are_you_sure_deleting_text" tools:ignore="MissingTranslation">Are you sure want to delete this note?</string>
    <string name="keep_text" tools:ignore="MissingTranslation">Keep</string>
    <string name="delete_text" tools:ignore="MissingTranslation">Delete</string>
    <string name="close_text" tools:ignore="MissingTranslation">Close</string>
    <string name="alert_of_creating_empty_note" tools:ignore="MissingTranslation">Empty note has been deleted</string>
    <string name="duration_of_lesson_text" tools:ignore="MissingTranslation">Duration of lesson:</string>
    <string name="lesson_different_duration_text" tools:ignore="MissingTranslation">Duration of lesson on saturday is different</string>
    <string name="duration_of_lesson_on_saturday_text" tools:ignore="MissingTranslation">Duration of lesson on saturday:</string>
    <string name="clear_notes_table_text" tools:ignore="MissingTranslation">Clear all notes</string>
    <string name="clear_lessons_table_text" tools:ignore="MissingTranslation">Clear all lessons</string>
    <string name="all_notes_deleted_text" tools:ignore="MissingTranslation">All notes have been deleted</string>
    <string name="all_lessons_deleted_text" tools:ignore="MissingTranslation">All lessons have been deleted</string>
    <string name="min_text" tools:ignore="MissingTranslation">min.</string>

    <!-- Переменные дней недели -->
    <string name="monday_text" tools:ignore="MissingTranslation">Monday</string>
    <string name="tuesday_text" tools:ignore="MissingTranslation">Tuesday</string>
    <string name="wednesday_text" tools:ignore="MissingTranslation">Wednesday</string>
    <string name="thursday_text" tools:ignore="MissingTranslation">Thursday</string>
    <string name="friday_text" tools:ignore="MissingTranslation">Friday</string>
    <string name="saturday_text" tools:ignore="MissingTranslation">Saturday</string>
    <string name="sunday_text" tools:ignore="MissingTranslation">Sunday</string>

    <!-- Переменные для pagerView и tabLayout -->
    <string name="today_text" tools:ignore="MissingTranslation">Today</string>
    <string name="tomorrow_text" tools:ignore="MissingTranslation">Tomorrow</string>
    <string name="week_text" tools:ignore="MissingTranslation">Week</string>
    <string name="month_text" tools:ignore="MissingTranslation">Month</string>
</resources>
