<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/diary_layout"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:background="@color/color_orange_background"
        app:layout_constraintBottom_toTopOf="@+id/notes_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/diary_textview"
            android:layout_width="332dp"
            android:layout_height="38dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="43dp"
            android:gravity="center"
            android:text="@string/diary_text"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diary_description_textview"
            android:layout_width="332dp"
            android:layout_height="20dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="42dp"
            android:gravity="center"
            android:text="@string/fill_timetable"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary_textview" />

        <ImageView
            android:id="@+id/image_open_diary"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="116dp"
            android:contentDescription="@string/diary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/diary_open_button" />

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/diary_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/settings_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notes_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/color_blue_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_layout">

        <TextView
            android:id="@+id/notes_textview"
            android:layout_width="218dp"
            android:layout_height="36dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="93dp"
            android:gravity="center"
            android:text="@string/notes_text"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notes_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="104dp"
            android:layout_marginEnd="93dp"
            android:gravity="center"
            android:text="@string/create_note"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_textview" />

        <ImageView
            android:id="@+id/image_open_notes"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="116dp"
            android:contentDescription="@string/notes_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/notes_open_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>