<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/old_user_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_user_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible">

            <TextView
                android:id="@+id/fill_timetable_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginLeft="161dp"
                android:layout_marginEnd="162dp"
                android:layout_marginRight="162dp"
                android:layout_marginBottom="8dp"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:text="@string/fill_timetable"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/fill_timetable_descr_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fill_timetable_descr_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="13dp"
                android:gravity="clip_horizontal|center|clip_vertical"
                android:text="@string/timetable_descr_text"
                app:layout_constraintBottom_toTopOf="@+id/new_lesson_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/new_lesson_button"
                android:layout_width="193dp"
                android:layout_height="58dp"
                android:layout_marginStart="127dp"
                android:layout_marginLeft="127dp"
                android:layout_marginEnd="131dp"
                android:layout_marginRight="131dp"
                android:layout_marginBottom="322dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/new_lesson"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_lesson_layout"
            android:layout_width="385dp"
            android:layout_height="656dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="102dp"
            android:background="@drawable/white_border"
            android:clickable="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/old_user_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/old_user_layout">

            <EditText
                android:id="@+id/order_lesson_editText"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/number_lesson_text"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_name_edittext" />

            <Button
                android:id="@+id/add_lesson_button"
                android:layout_width="121dp"
                android:layout_height="59dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/add_lesson_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_lesson_editText" />

            <EditText
                android:id="@+id/lesson_name_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/lessons_name_text"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/select_color_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/white_rect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/color_scroll"
                android:layout_width="200dp"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_color_image">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/white_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/white_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/red_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/red_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/orange_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/orange_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/yellow_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/yellow_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/green_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/green_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/blue_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/blue_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/pink_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/pink_rect" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="45dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/violet_sel_image"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/violet_rect" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/lesson_date_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="58dp"
                android:ems="10"
                android:inputType="date"
                android:text="@string/choose_date_text"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_name_edittext" />

            <TextView
                android:id="@+id/lesson_time_edittext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="time"
                android:text="@string/choose_time_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_date_edittext" />

            <EditText
                android:id="@+id/lesson_teacher_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/insert_teachers_name_text"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_time_edittext" />

            <TextView
                android:id="@+id/attachments_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/attachments_text"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lesson_teacher_edittext" />

            <ImageView
                android:id="@+id/add_attachment_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/add_image"
                app:layout_constraintStart_toEndOf="@+id/attachments_textview"
                app:layout_constraintTop_toBottomOf="@+id/lesson_teacher_edittext" />

            <ImageView
                android:id="@+id/delete_attachment_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/delete_image"
                app:layout_constraintStart_toEndOf="@+id/add_attachment_imageview"
                app:layout_constraintTop_toBottomOf="@+id/lesson_teacher_edittext" />

            <HorizontalScrollView
                android:id="@+id/attachments_scroll"
                android:layout_width="379dp"
                android:layout_height="81dp"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attachments_textview">

                <LinearLayout
                    android:id="@+id/attachments_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/rating_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rating_text"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attachments_scroll" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_textview" />

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <ImageView
                android:id="@+id/add_rate_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/add_image"
                app:layout_constraintStart_toEndOf="@+id/rating_textview"
                app:layout_constraintTop_toBottomOf="@+id/attachments_scroll" />

            <ImageView
                android:id="@+id/delete_rate_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/delete_image"
                app:layout_constraintStart_toEndOf="@+id/add_rate_imageview"
                app:layout_constraintTop_toBottomOf="@+id/attachments_scroll" />

            <EditText
                android:id="@+id/homework_edittext"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/homework_text"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>